Patch from Ivan Xu, OPENEJB-1168: javax.ejb.Schedule Thanks, Ivan!
git-svn-id: https://svn.apache.org/repos/asf/openejb/trunk/openejb3@980633 13f79535-47bb-0310-9956-ffa450edef68